# onnxruntime_deploy

./: CMakeLists.txt  main.cpp
